--- a/c++/博弈/结论.tex
+++ b/c++/博弈/结论.tex
@@ -6,4 +6,9 @@
 对于任意一个Anti-SG游戏，如果我们规定当局面中所有的单一游戏的SG值为0时，游戏结束。\\
 先手必胜当且仅当：\\
 (1)游戏的SG函数不为0且游戏中某个单一游戏的SG函数大于1；\\
-(2)游戏的SG函数为0且游戏中没有单一游戏的SG函数大于1。
+(2)游戏的SG函数为0且游戏中没有单一游戏的SG函数大于1。\\
+\\
+3.k-nim\\
+\\
+4.树上删边博弈\\
+\\
