--- a/c++/博弈/结论.tex
+++ b/c++/博弈/结论.tex
@@ -9,6 +9,8 @@
 (2)游戏的SG函数为0且游戏中没有单一游戏的SG函数大于1。\\
 \\
 3.k-nim\\
-\\
+问题描述:给定 n 堆石子，每堆ai个，每次可以从最多 k 堆中拿走任意个，先拿完的人胜利 \\
+结论:先手必败,当且仅当将每个ai写成二进制，对每一个二进制位，这一位为1的i的个数为s，s mod (k+1) = 0\\
 4.树上删边博弈\\
+结论:叶子sg为0，非叶子sg为所有子节点的sg+1的异或和\\
 \\
